added support to adding items to the shopping cart
